src/test/ui/self/elision/lt-ref-self-async.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:13:42
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                                          ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:14:9
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       -
   |                       |
   |                       lifetime `'_` defined here
   |                       lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:19:48
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                                                ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:20:9
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             -
   |                             |
   |                             lifetime `'_` defined here
   |                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:23:57
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                                         ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:24:9
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:27:57
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                                         ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:28:9
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:31:66
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                                                  ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:32:9
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             -
   |                                             |
   |                                             lifetime `'_` defined here
   |                                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/lt-ref-self-async.rs:35:62
   |
LL |     async fn box_pin_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                                              ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#23r

error: lifetime may not live long enough
  --> $DIR/lt-ref-self-async.rs:36:9
   |
LL |     async fn box_pin_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                         -
   |                                         |
   |                                         lifetime `'_` defined here
   |                                         lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0700`.
